--- a/a/AndroidManifest.xml
+++ b/a/AndroidManifest.xml
@@ -5,8 +5,10 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="15" />
-
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
+
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
@@ -19,5 +21,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
