--- a/client.cfg
+++ b/client.cfg
@@ -8,6 +8,9 @@
 ServerURL=http://192.168.1.8
 commandFile = cmd.txt
 SyncResourceSeconds=30
+Files=1.mpg,2.mp3
+play=1.mpg,2.mpg
+playmode=onebyone,loop
 background=t.jpg
 #if you have top,left,button,right resource, please decomment it
 #top.margin = 0%,0%,0%,0%
