--- a/a/AndroidManifest.xml
+++ b/a/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" /> 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" /> 
     <application
 
         android:icon="@drawable/ic_launcher"
@@ -23,5 +25,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!-- receivers --> 
+        <receiver android:name=".BootCompletedReceiver"> 
+            <intent-filter> 
+                <action android:name="android.intent.action.BOOT_COMPLETED" /> 
+            </intent-filter> 
+        </receiver> 
     </application>
 </manifest>
