--- a/a/AndroidManifest.xml
+++ b/a/AndroidManifest.xml
@@ -10,7 +10,8 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" /> 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" /> 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <application
 
         android:icon="@drawable/ic_launcher"
