--- a/android/.project
+++ b/android/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TVPlayer</name>
+	<name>Player</name>
 	<comment></comment>
 	<projects>
 	</projects>
