--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:label="@string/app_name" 
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         <activity
-            android:name=".PlayerActivity"
+            android:name=".SetupActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
