--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -13,6 +13,9 @@
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     <uses-permission android:name="android.permission.REBOOT" />
    
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+
     <application
 		android:sharedUserId="android.uid.system"
         android:icon="@drawable/ic_launcher"
@@ -21,12 +24,17 @@
         <activity
             android:name=".SetupActivity"
             android:label="@string/app_name" >
+        </activity>
+        
+        <activity
+            android:name=".PlayerActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
         <!-- receivers --> 
         <receiver android:name=".BootCompletedReceiver"> 
             <intent-filter> 
